# xgadget

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  README.md  README.tpl
.github/workflows/: cd.yml  clippy.yml  test.yml
benches/: README.md  bench_0_elf_userspace.rs  bench_1_filter.rs  bench_1_misc.rs  bench_2_elf_userspace.rs  bench_2_fmt.rs  bench_3_elf_kernels.rs  bench_3_elf_userspace.rs  bench_4_elf_kernels.rs  bench_setup_ubuntu.sh  flame_graph.rs  run_on_bench_kernels.sh
src/: binary.rs  cli.rs  error.rs  fess.rs  ff  filters.rs  gadget.rs  lib.rs  main.rs  search.rs  semantics.rs  str_fmt.rs
src/binary/: arch.rs  binary.rs  consts.rs  file_format.rs  mod.rs  segment.rs
src/cli/: checksec_fmt.rs  cli.rs  imports.rs  main.rs  reg_str.rs  str_fmt.rs  symbols.rs
src/gadget/: analysis.rs  fmt.rs  gadget.rs  gadget_analysis.rs  gadget_object.rs  mod.rs
tests/: common.rs  test_binary.rs  test_cli.rs  test_decode.rs  test_gadget.rs  test_gadget_analysis.rs  test_misc.rs  test_semantics.rs  test_utils.rs  test_x64_filter.rs  test_x64_gadget.rs  test_x64_search_multi_bin.rs  test_x64_search_single_bin.rs  test_x64_xgadget.rs
