[package]
name = "xgadget"
version = "0.5.0"
authors = ["Tiemoko Ballo"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/entropic-security/xgadget"
repository = "https://github.com/entropic-security/xgadget"
documentation = "https://docs.rs/xgadget"
keywords = ["rop", "jop", "gadget", "x86", "x64"]
categories = ["algorithms", "development-tools", "command-line-utilities"]
description = "Fast, parallel, cross-variant ROP/JOP gadget search for x86/x64 binaries."
include = [
    "**/*.rs",
    "**/*.md",
    "**/*.sh",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
# TODO: wait for next release
# iced-x86 = "1"
iced-x86 = { git = "https://github.com/icedland/iced" }
goblin = "0.2"
rayon = "1"
bitflags = "1"
colored = "2"
rustc-hash = "1"
lazy_static = "1"
structopt = { version = "0.3", default-features = false, optional = true }
num_cpus = { version = "1", optional = true }
regex = { version = "1", optional = true }
strip-ansi-escapes = { version = "0.1", optional = true }
term_size = { version = "0.3.2", optional = true }
checksec = { version = "0.0.7", features = ["elf", "pe", "color"], optional = true }
memmap = { version = "0.7.0", optional = true }

[dev-dependencies]
criterion = "0.3"
rand = "0.7"
dirs = "3"
predicates = "1"
assert_cmd = "1"
tempfile = "3"

[features]
cli-bin = ["structopt", "num_cpus", "regex", "strip-ansi-escapes", "term_size", "checksec", "memmap"]
bench-deps = ["regex"]

[lib]
name = "xgadget"
path = "src/lib.rs"

[[bin]]
name = "xgadget"
path = "src/cli/cli.rs"
required-features = ["cli-bin"]

[[bench]]
name = "bench_1_misc"
harness = false
required-features = ["bench-deps"]

[[bench]]
name = "bench_2_elf_userspace"
harness = false
required-features = ["bench-deps"]

[[bench]]
name = "bench_3_elf_kernels"
harness = false
required-features = ["bench-deps"]

[profile.release]
panic = "unwind"
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 16
incremental = false
overflow-checks = false