[package]
name = "xgadget"
version = "0.6.0"
authors = ["Tiemoko Ballo"]
edition = "2018"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/entropic-security/xgadget"
repository = "https://github.com/entropic-security/xgadget"
documentation = "https://docs.rs/xgadget"
keywords = ["rop", "jop", "gadget", "x86", "x64"]
categories = ["algorithms", "development-tools", "command-line-utilities"]
description = "Fast, parallel, cross-variant ROP/JOP gadget search for x86/x64 binaries."
include = [
    "**/*.rs",
    "**/*.md",
    "**/*.sh",
    "Cargo.toml",
    "LICENSE",
]

[dependencies]
iced-x86 = "1"
goblin = "0.2" # TODO: Cannot upgrade yet due to checksec dependency?
rayon = "1"
bitflags = "1"
colored = "2"
rustc-hash = "1"
lazy_static = { version = "1", optional = true }
clap = { version = "3", features = ["derive", "cargo"], optional = true }
num_cpus = { version = "1", optional = true }
regex = { version = "1", optional = true }
term_size = { version = "0.3", optional = true }
checksec = { version = "0.0.8", features = ["elf", "pe", "color"], optional = true }
memmap = { version = "0.7", optional = true }
num-format = { version = "0.4", optional = true }
strip-ansi-escapes = { version = "0.1", optional = true }

[dev-dependencies]
pprof = { version = "0.8", features = ["flamegraph"] }
criterion = "0.3"
rand = "0.8"
dirs = "4"
predicates = "2"
assert_cmd = "2"
tempfile = "3"
regex = "1"

[features]
cli-bin = ["lazy_static", "clap", "num_cpus", "regex", "term_size", "checksec", "memmap", "num-format", "strip-ansi-escapes"]

[lib]
name = "xgadget"
path = "src/lib.rs"

[[bin]]
name = "xgadget"
path = "src/cli/main.rs"
required-features = ["cli-bin"]

[[bench]]
name = "bench_1_misc"
harness = false

[[bench]]
name = "bench_2_fmt"
harness = false

[[bench]]
name = "bench_3_elf_userspace"
harness = false

[[bench]]
name = "bench_4_elf_kernels"
harness = false

[profile.release]
panic = "unwind"
opt-level = 3
debug = false
rpath = false
lto = "fat"
debug-assertions = false
codegen-units = 16
incremental = false
overflow-checks = false